# flowcatalyst-rust

./: .env.development  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.router  Makefile  README.md  dev.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  justfile  package.json
crates/fc-config/: Cargo.toml
crates/fc-config/src/: lib.rs  loader.rs
crates/fc-outbox/: Cargo.toml
crates/fc-outbox/src/: buffer.rs  enhanced_processor.rs  group_distributor.rs  http_dispatcher.rs  lib.rs  message_group_processor.rs  mongo.rs  mysql.rs  postgres.rs  recovery.rs  repository.rs  sqlite.rs
crates/fc-platform/: Cargo.toml
crates/fc-platform/src/: lib.rs  router.rs
crates/fc-platform/src/application/: api.rs  client_config.rs  client_config_repository.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/src/audit/: api.rs  entity.rs  mod.rs  repository.rs  service.rs
crates/fc-platform/src/auth/: auth_api.rs  auth_service.rs  authorization_code.rs  authorization_code_repository.rs  config_api.rs  config_entity.rs  config_repository.rs  jwks_cache.rs  mod.rs  oauth_api.rs  oauth_client_repository.rs  oauth_clients_api.rs  oauth_entity.rs  oidc_login_api.rs  oidc_login_state.rs  oidc_login_state_repository.rs  oidc_service.rs  oidc_sync_service.rs  password_reset_api.rs  password_service.rs  pending_auth_repository.rs  refresh_token.rs  refresh_token_repository.rs
crates/fc-platform/src/client/: api.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/src/connection/: api.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/src/cors/: api.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/src/dispatch_job/: api.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/src/dispatch_pool/: api.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/src/email_domain_mapping/: api.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/src/entities/: app_applications.rs  app_client_configs.rs  app_platform_config_access.rs  app_platform_configs.rs  aud_logs.rs  iam_authorization_codes.rs  iam_client_access_grants.rs  iam_login_attempts.rs  iam_oidc_login_states.rs  iam_password_reset_tokens.rs  iam_permissions.rs  iam_principal_application_access.rs  iam_principal_roles.rs  iam_principals.rs  iam_refresh_tokens.rs  iam_role_permissions.rs  iam_roles.rs  iam_service_accounts.rs  mod.rs  msg_connections.rs  msg_dispatch_jobs.rs  msg_dispatch_jobs_read.rs  msg_dispatch_pools.rs  msg_event_type_spec_versions.rs  msg_event_types.rs  msg_events.rs  msg_events_read.rs  msg_subscription_custom_configs.rs  msg_subscription_event_types.rs  msg_subscriptions.rs  oauth_client_collections.rs  oauth_clients.rs  oauth_identity_provider_allowed_domains.rs  oauth_identity_providers.rs  oauth_idp_role_mappings.rs  oauth_oidc_payloads.rs  tnt_anchor_domains.rs  tnt_client_auth_configs.rs  tnt_clients.rs  tnt_cors_allowed_origins.rs  (+4 more)
crates/fc-platform/src/event/: api.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/src/event_type/: api.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/src/identity_provider/: api.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/src/idp/: entra.rs  keycloak.rs  mod.rs
crates/fc-platform/src/login_attempt/: api.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/src/password_reset/: entity.rs  mod.rs  repository.rs
crates/fc-platform/src/platform_config/: access_api.rs  access_entity.rs  access_repository.rs  api.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/src/principal/: api.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/src/role/: api.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/src/seed/: dev_seeder.rs  mod.rs
crates/fc-platform/src/service_account/: api.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/src/shared/: api_common.rs  application_roles_sdk_api.rs  authorization_service.rs  batch_api.rs  bff_event_types_api.rs  bff_roles_api.rs  client_selection_api.rs  database.rs  debug_api.rs  dispatch_service.rs  email_service.rs  encryption_service.rs  error.rs  filter_options_api.rs  health_api.rs  indexes.rs  integrity_scan.rs  me_api.rs  middleware.rs  mod.rs  monitoring_api.rs  platform_config_api.rs  projections_service.rs  public_api.rs  role_sync_service.rs  sdk_audit_batch_api.rs  sdk_clients_api.rs  sdk_dispatch_jobs_api.rs  sdk_principals_api.rs  sdk_roles_api.rs  sdk_sync_api.rs  tsid.rs  well_known_api.rs
crates/fc-platform/src/subscription/: api.rs  entity.rs  mod.rs  repository.rs
crates/fc-platform/tests/: api_integration_tests.rs  api_tests.rs  auth_and_list_test.rs  handler_write_convention_test.rs  junction_cascade_convention_test.rs  load_tests.rs  oauth_api_tests.rs  permission_convention_test.rs  postgres_integration_tests.rs  uow_proof_test.rs  webauthn_integration_tests.rs
crates/fc-queue/: Cargo.toml
crates/fc-queue/src/: activemq.rs  error.rs  lib.rs  nats.rs  sqlite.rs  sqs.rs
crates/fc-queue/tests/: activemq_integration_tests.rs  sqs_integration_tests.rs
crates/fc-router/: Cargo.toml
crates/fc-router/resources/: dashboard.html
crates/fc-router/src/: circuit_breaker_registry.rs  config_sync.rs  error.rs  health.rs  lib.rs  lifecycle.rs  manager.rs  mediator.rs  metrics.rs  notification.rs  pool.rs  queue_health_monitor.rs  router_metrics.rs  standby.rs  traffic.rs  warning.rs
crates/fc-router/src/api/: auth.rs  (+3 more)
crates/fc-router/tests/: fifo_tests.rs  integration_tests.rs  manager_tests.rs  mediator_tests.rs  pool_tests.rs  rate_limit_tests.rs
crates/fc-scheduler/: Cargo.toml
crates/fc-scheduler/src/: auth.rs  dispatcher.rs  lib.rs  poller.rs  stale_recovery.rs
crates/fc-sdk/: Cargo.toml
crates/fc-sdk/src/: lib.rs  tsid.rs
crates/fc-secrets/: Cargo.toml
crates/fc-secrets/src/: aws.rs  aws_parameter_store.rs  encrypted.rs  env.rs  lib.rs  service.rs  vault.rs
crates/fc-standby/: Cargo.toml
crates/fc-standby/src/: error.rs  leader.rs  lib.rs
crates/fc-stream/: Cargo.toml
crates/fc-stream/src/: config.rs  dispatch_job_projection.rs  event_projection.rs  health.rs  lib.rs
(+217 files in other folders)
