[workspace]
members = [
    "crates/fc-common",
    "crates/fc-config",
    "crates/fc-queue",
    "crates/fc-router",
    "crates/fc-standby",
    "crates/fc-outbox",
    "crates/fc-stream",
    "crates/fc-platform",
    "crates/fc-scheduler",
    "crates/fc-secrets",
    "crates/fc-sdk",
    "bin/fc-dev",
    "bin/fc-router",
    "bin/fc-platform-server",
    "bin/fc-outbox-processor",
    "bin/fc-stream-processor",
    "bin/fc-scheduler-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FlowCatalyst Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql", "chrono", "uuid"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
mongodb = "3.2"
bson = { version = "2.15", features = ["chrono-0_4"] }
aws-sdk-sqs = "1.91"
aws-config = "1.8"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["full"] }
dashmap = "6.1"
indexmap = "2.8"
governor = "0.8"
nonzero_ext = "0.3"
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }
parking_lot = "0.12"
futures = "0.3"
bytes = "1.10"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
hex = "0.4"
pin-project-lite = "0.2"
lapin = "2.5"
async-nats = "0.38"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }
openidconnect = "4.0"
aws-sdk-elasticloadbalancingv2 = "1.91"
regex = "1.11"
rand = "0.9"
failsafe = "1.3"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# OpenAPI documentation
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-axum = "0.2"

# Test dependencies
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["localstack", "redis", "postgres"] }
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3.19"
