[package]
name = "fc-platform"
version.workspace = true
edition.workspace = true
description = "FlowCatalyst Platform - Core domain models, services, and APIs"

[dependencies]
# Workspace dependencies
fc-common = { path = "../fc-common" }
fc-queue = { path = "../fc-queue" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database (PostgreSQL)
sqlx = { workspace = true }

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-axum = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
argon2 = "0.5"
rsa = { version = "0.9", features = ["pem"] }
rand = { workspace = true }
webauthn-rs = { workspace = true }

# HTTP client for OIDC. Inherit from workspace so we pick up the
# `default-features = false` + rustls-tls posture; declaring our own
# reqwest here used to re-enable `default-tls` via feature unification
# and drag OpenSSL/native-tls back into every binary.
reqwest = { workspace = true }
urlencoding = "2.1"

# Email
lettre = { workspace = true }

# Encryption
aes-gcm = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
cron = "0.15"
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
time = "0.3"

# Regex for pattern matching
regex = { workspace = true }

# Concurrent cache
dashmap = { workspace = true }

# Token-bucket rate limiter
governor = { workspace = true }
nonzero_ext = { workspace = true }

# Scheduler dependencies
parking_lot = { workspace = true }
subtle = { workspace = true }
hex = { workspace = true }
metrics = { workspace = true }

# AWS Secrets Manager (for DB credential refresh)
aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["full"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tower = { workspace = true, features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
