[package]
name = "fc-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FlowCatalyst SDK for Rust — domain event patterns, outbox integration, and platform API client"

[features]
default = ["outbox-postgres"]
outbox-postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/chrono"]
outbox-sqlite = ["dep:sqlx", "sqlx/sqlite", "sqlx/chrono"]
outbox-mysql = ["dep:sqlx", "sqlx/mysql", "sqlx/chrono"]
client = ["dep:reqwest"]
auth = ["dep:reqwest", "dep:jsonwebtoken", "dep:sha2", "dep:base64", "dep:rand"]

[dependencies]
# Core (always included)
serde = { workspace = true }
serde_json = "1.0"
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Outbox (optional — enabled by default with postgres)
sqlx = { workspace = true, optional = true }

# HTTP client for platform API (optional)
reqwest = { workspace = true, optional = true }

# Auth (optional — OIDC/JWT validation)
jsonwebtoken = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
base64 = { version = "0.22", optional = true }
rand = { workspace = true, optional = true }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }

# Tokio needed for JwksCache RwLock
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
